--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,5 +21,5 @@ jobs:
           user: ${{ secrets.DC_USER }}
           pass: ${{ secrets.DC_PASS }}
           script: |
-            commit_hash=$(git rev-parse HEAD)
+            commit_hash=${{ github.head_ref }}.${{ github.sha }}
             echo "Hello from commit $commit_hash" > ~/Documents/hello.txt
