--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,8 +18,7 @@ jobs:
         id: changed-files
         uses: tj-actions/changed-files@v39
         with:
-          files: docker-compose.yml, nginx.conf # Alternatively using: `docs/**` or `docs`
-          files_ignore: build/**
+          files: docker-compose.yml nginx.conf
 
       - name: List all changed files
         run: |
