--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,9 @@ jobs:
         id: changed-files
         uses: tj-actions/changed-files@v39
         with:
-          files: docker-compose.yml nginx.conf
+          files: |
+            docker-compose.yml
+            nginx.conf
 
       - name: List all changed files
         run: |
