--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -23,6 +23,10 @@ jobs:
           user: ${{ secrets.DC_USER }}
           pass: ${{ secrets.DC_PASS }}
           first_ssh: |
-            rm -rf $BUILD_DIR
+            if [ -d "$BUILD_DIR" ]; then
+              rm -rf "$BUILD_DIR"/*
+            else
+              mkdir -p "$BUILD_DIR"
+            fi
           scp: |
             './build/*' => $BUILD_DIR
