--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,16 @@
 events {}
 
 http{
+    upstream app_servers {
+        server backend:3000;
+    }
+
     server {
         listen 80;
-        root /usr/share/nginx/html;
+        # root /usr/share/nginx/html;
         location / {
+            proxy_pass http://app_servers;
         }
+
     }
 }
