--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,4 @@ jobs:
           username: ${{ secrets.DC_USER }}
           password: ${{ secrets.DC_PASS }}
           script: |
-            cd $BUILD_DIR
-            pwd
-            git pull origin main
-            docker compose up -d --no-deps --build
+            whoami
