--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
           host: ${{ secrets.DC_HOST }}
           username: ${{ secrets.DC_USER }}
           password: ${{ secrets.DC_PASS }}
-          allenvs: true
+          envs: BUILD_DIR
           script: |
-            cd $BUILD_DIR && touch iamhere.txt
-            echo $BUILD_DIR > build_dir.txt
+            cd ~/tpc_portal && touch iamhere.txt
+            echo "$BUILD_DIR" > build_dir.txt
