--- a/nginx.conf
+++ b/nginx.conf
@@ -1,16 +1,77 @@
+worker_processes auto;
+pid /run/nginx.pid;
+include /etc/nginx/modules-enabled/*.conf;
+
 events {}
 
 http{
-    upstream app_servers {
-        server backend:3000;
+
+    proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=STATIC:10m inactive=7d use_temp_path=off;
+
+    upstream backend_upstream {
+        server backend:5000;
+    }
+
+    upstream frontend_upstream {
+        server frontend:3000;
+    }
+
+    upstream pgadmin_upstream {
+        server pgadmin:80;
     }
 
     server {
         listen 80;
-        # root /usr/share/nginx/html;
-        location / {
-            proxy_pass http://app_servers;
+
+        server_tokens off;
+        
+        gzip on;
+        gzip_proxied any;
+        gzip_comp_level 4;
+        gzip_types text/css application/javascript image/svg+xml;
+
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+
+        location /_next/static {
+            proxy_cache STATIC;
+            proxy_pass http://frontend_upstream;
         }
 
+        location /static {
+            proxy_cache STATIC;
+            proxy_ignore_headers Cache-Control;
+            proxy_cache_valid 60m;
+            proxy_pass http://frontend_upstream;
+        }
+
+        location / {
+            proxy_pass http://frontend_upstream;
+        }
+        
+        location /api {
+            proxy_pass http://backend_upstream;
+        }
+
+        location /pgadmin4/ {
+            proxy_set_header X-Script-Name /pgadmin4;
+            proxy_set_header Host $host;
+            proxy_pass http://pgadmin_upstream;
+            proxy_redirect off;
+        }
+
+    }
+
+}
+
+stream {
+    server {
+        listen 5432 so_keepalive=on;
+        proxy_connect_timeout 60s;
+        proxy_socket_keepalive on;
+        proxy_pass db:5432;
     }
 }
