--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,11 @@ services:
     restart: always
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./ssl-cert/fullchain.pem:/etc/letsencrypt/live/tpc.iiti.ac.in/fullchain.pem
+      - ./ssl-cert/privkey.pem:/etc/letsencrypt/live/tpc.iiti.ac.in/privkey.pem
     ports:
       - 80:80
+      - 443:443
       - 5432:5432
   db:
     image: postgres
