--- a/nginx.conf
+++ b/nginx.conf
@@ -22,7 +22,11 @@ http{
 
     server {
         listen 80;
+        listen 443 ssl;
+        server_name tpc.iiti.ac.in;
 
+        ssl_certificate /etc/letsencrypt/live/tpc.iiti.ac.in/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/tpc.iiti.ac.in/privkey.pem;
         server_tokens off;
         
         gzip on;
