change mountpoint to global

--- a/nginx.conf
+++ b/nginx.conf
@@ -25,8 +25,8 @@ http{
         listen 443 ssl;
         server_name tpc.iiti.ac.in;
 
-        ssl_certificate /etc/letsencrypt/live/tpc.iiti.ac.in/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/tpc.iiti.ac.in/privkey.pem;
+        ssl_certificate /cert/fullchain.pem;
+        ssl_certificate_key /cert/privkey.pem;
         server_tokens off;
         
         gzip on;
