--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,8 @@ services:
     restart: always
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./ssl-cert/fullchain.pem:/etc/letsencrypt/live/tpc.iiti.ac.in/fullchain.pem
-      - ./ssl-cert/privkey.pem:/etc/letsencrypt/live/tpc.iiti.ac.in/privkey.pem
+      - /etc/letsencrypt/live/tpc.iiti.ac.in/fullchain.pem:/cert/fullchain.pem
+      - /etc/letsencrypt/live/tpc.iiti.ac.in/privkey.pem:/cert/privkey.pem
     ports:
       - 80:80
       - 443:443
