--- a/nginx.conf
+++ b/nginx.conf
@@ -56,7 +56,7 @@ http{
             proxy_pass http://frontend_upstream;
         }
         
-        location /api {
+        location /api/v1 {
             proxy_pass http://backend_upstream;
         }
 
