--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - PORT=5000
     env_file:
       - .env
+    volumes:
+      - ./tpc-backend/uploads:/usr/src/app/uploads
     ports:
       - 5000:5000
   nginx:
