--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.8"
 services:
   frontend:
     build: ./tpc-frontend/.
@@ -6,6 +5,12 @@ services:
       - .env
     ports:
       - 3000:3000
+  landing_page:
+    build: ./tpc-landing-page/.
+    env_file:
+      - ./tpc-landing-page/.env
+    # ports:
+    #   - 3001:3000
   backend:
     build: ./tpc-backend/.
     restart: always
