--- a/nginx.conf
+++ b/nginx.conf
@@ -16,6 +16,10 @@ http{
         server frontend:3000;
     }
 
+    upstream landing_page_upstream {
+        server landing_page:3000;
+    }
+
     upstream pgadmin_upstream {
         server pgadmin:80;
     }
@@ -40,22 +44,38 @@ http{
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
 
-        location /_next/static {
+        location /portal/_next/static {
             proxy_cache STATIC;
             proxy_pass http://frontend_upstream;
         }
 
-        location /static {
+        location /portal/static {
             proxy_cache STATIC;
             proxy_ignore_headers Cache-Control;
             proxy_cache_valid 60m;
             proxy_pass http://frontend_upstream;
         }
 
-        location / {
+        location /portal {
             proxy_pass http://frontend_upstream;
         }
-        
+
+        location /_next/static {
+            proxy_cache STATIC;
+            proxy_pass http://landing_page_upstream;
+        }
+
+        location /static {
+            proxy_cache STATIC;
+            proxy_ignore_headers Cache-Control;
+            proxy_cache_valid 60m;
+            proxy_pass http://landing_page_upstream;
+        }
+
+        location / {
+            proxy_pass http://landing_page_upstream;
+        }
+
         location /api/v1 {
             proxy_pass http://backend_upstream;
         }
